<resources>
    <string name="app_name">Taller2</string>
    <string name="TituloBienbenida">Curipod</string>
    <string name="NombreCreador">Miguel Angel Carvajal Jamiaca</string>
    <string name="TextoAppInico">Inicia una nueva aventura con Curipod y descubre una nueva forma de ver el mundo</string>
    <string name="bononComenzar">Comenzar</string>
    <string name="Texto_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="TextIngresar">Ingresar</string>
    <string name="GoogleText">Ingresa con Google</string>
    <string name="reg_strate">Regístrate</string>
    <string name="notienes_cuenta">Notienes Cuenta ?</string>
    <string name="recuerar_tu_contrase_a">Recuerar Tu Contraseña</string>
    <string name="peopleImgDescription">People</string>
    <string name="KeyImgDescription">key</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoTitel">Apellido</string>
    <string name="correoTitle">Correo</string>
    <string name="contrase_aTitle">Contraseña</string>
    <string name="repetir_contrase_aTitle">Repetir Contraseña</string>
    <string name="reistrarTextButton">Reistrar</string>
    <string name="aceptar_terminos_y_condiciones">Aceptar terminos y condiciones</string>
    <string name="volverText">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tientda">Mi tientda</string>
    <string name="inicioNav">Inicio</string>
    <string name="CatalogoNav">Catalogo</string>
    <string name="AyudaNav">Ayuda</string>
    <string name="llamarNav">llamar</string>
    <string name="favoritos">favoritos</string>
    <string name="borrarNav">Borrar</string>
    <string name="navigation_drawer_open">Menu Abierto</string>
    <string name="navigation_drawer_close">Menu cerrado</string>
    <string name="masMenu">mas</string>
    <string name="productos_destadacos">productos destadacos</string>
    <string name="usuario">usuario</string>
    <string name="agregar_al_carrito">agregar al carrito</string>
    <string name="Textoejemplouno">Perfil</string>
    <string name="Textoejeplotes">Favoritos</string>
    <string name="carrito">carrito</string>
    <string name="textoejemplocuatro">admin</string>
    <string name="imagen_del_producto">imagen del producto</string>
    <string name="logo">logo</string>
    <string name="adminnav">admin</string>
    <string name="navperfil">perfil</string>
    <string name="ya_tienes_cuenta">Ya tienes Cuenta ?</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_hola">hola</string>
    <string name="cerra_secion">Cerra Secion</string>
    <string name="iniciar_con_huella">iniciar Con huella</string>
    <string name="foto_de_perfil">foto_de_perfil</string>
</resources>