<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGroundG"
    tools:context=".activities.inicio">

    <ImageView
        android:id="@+id/LogoInicio"
        android:layout_width="389dp"
        android:layout_height="373dp"
        android:layout_marginTop="100dp"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@mipmap/ic_logo_foreground"
        android:contentDescription="@string/Texto_login"
        />

    <TextView
        android:id="@+id/NombreEmpresaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/archivo_black"
        android:text="@string/TituloBienbenida"
        android:textColor="@color/TextColo1"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/LogoInicio"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/Minombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:layout_marginTop="150dp"
        android:layout_marginStart="63dp"
        android:gravity="end"
        android:text="@string/NombreCreador"
        android:textColor="@color/TextColo1"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.748"
         />
</LinearLayout>